lib_LIBRARIES = libbilisdcs.a

include_HEADERS = DcsTypes.h DcsLinear.h DcsInternal.h DcsHoF.h DcsStack.h DcsLinSet.h DcsHashSet.h

libbilisdcs_a_SOURCES = \
 DcsLinear.c DcsLinear.h \
 DcsInternal.c DcsInternal.h \
 DcsHoF.c DcsHoF.h \
 DcsStack.c DcsStack.h \
 DcsLinSet.c DcsLinSet.h \
 DcsHashSet.c DcsHashSet.h \
 DcsTypes.h

nodist_libbilisdcs_a_SOURCES =

CLEANFILES =

BUILT_SOURCES =
